# bathyal-ai

./: .gitignore  README.md  download_assets.py  pyproject.toml
.claude/: settings.local.json
scripts/: concepts.txt  concepts_200.txt  concepts_200_metadata.json  concepts_fathomnet_100plus.txt  concepts_full.txt  concepts_full_metadata.json  concepts_species_only.txt  discover_species.py  discover_species_expanded.py  download_inat_s3.py  download_seamapd21.py  prepare_upload.py  resolve_descendants_parallel.py  sweep_lora.py
src/bathyal_ai/: __init__.py  augmentation.py  classifier.py  cli.py  data.py  embeddings.py  eval_cli.py  evaluation.py  finetune.py  finetune_cli.py  ingest.py  ingest_cli.py  ingest_inaturalist.py  lora.py  metrics.py  pipeline.py  train_cli.py  training.py  vlm_classification.py  vlm_detection.py
